--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "file-saver": "^2.0.5",
     "react": "^17.0.2",
     "react-calendar": "^3.3.1",
+    "react-component-export-image": "^1.0.6",
     "react-csv": "^2.0.3",
     "react-datepicker": "^3.6.0",
     "react-device-detect": "^1.17.0",
